--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,21 +1,111 @@
-name: Deploy
 
-on:
-  push:
-    branches:
-      - main
+lines changed
+Search within code
+ 
+‎CryptoHack/Symmetric_Cryptography/Symmetric_Cryptography10/solve.py
++34
+-4
+Lines changed: 34 additions & 4 deletions
+Original file line number	Diff line number	Diff line change
+@@ -1,5 +1,35 @@
+iv      : fd4e8ef6ee72860a5dc8fd37c1d18574
+cipher  : 187f3a6fd79b9a096be8d38a75ad1797053b745076afd0bf50cac123a1a99fa0
+#!/usr/bin/env python3
 
-jobs:
-  deploy:
-    environment: playground
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      id-token: write
+crypto{3cb_5uck5_4v01d_17_!!!!!}
+ 
+from Crypto.Cipher import AES
+from Crypto.Util.Padding import pad, unpad
+import requests
+from pwn import *
+ 
+def get_plaintext(param):
+    r = requests.get('https://aes.cryptohack.org/ecbcbcwtf/decrypt/' + param)
+    data = r.json()
+    data = data['plaintext']
+    return data
+def get_ciphertext():
+    r = requests.get('https://aes.cryptohack.org/ecbcbcwtf/encrypt_flag/')
+    data = r.json()
+    data = data['ciphertext']
+    return data
+def xor__hex_strings(a, b):
+	result = int(a, 16) ^ int(b, 16) # convert to integers and xor them together
+	return '{:x}'.format(result) 
+ciphertext = get_ciphertext()
+encrypted_flag = ciphertext[32:]
+iv = ciphertext[:32]
+plaintext  = xor__hex_strings(iv,get_plaintext(encrypted_flag[:32]))
+plaintext += xor__hex_strings(get_plaintext(encrypted_flag[32:]),encrypted_flag[:32])
+print(bytes.fromhex(plaintext).decode("utf-8"))
+‎CryptoHack/Symmetric_Cryptography/Symmetric_Cryptography11/solve.py
++46
+-1
+Lines changed: 46 additions & 1 deletion
+Original file line number	Diff line number	Diff line change
+@@ -1,3 +1,5 @@
+'''
+cookie : b243b5fda450514c512b47840deff508
+		 82dc463efca47adffe54c8ea0de3e42c
+		 b753e8224d988052900607584855b62a
+@@ -23,4 +25,47 @@
+				82dc463efca468cce742adea0de3e42cb753e8224d988052900607584855b62a
+crypto{4u7h3n71c4710n_15_3553n714l}
+crypto{4u7h3n71c4710n_15_3553n714l}
+'''
+#!/usr/bin/env python3
+from Crypto.Cipher import AES
+from Crypto.Util.Padding import pad, unpad
+import requests
+from pwn import *
+ 
+def get_cookie():
+    r = requests.get('https://aes.cryptohack.org/flipping_cookie//get_cookie/')
+    data = r.json()
+    data = data['cookie']
+    return data
+def check_admin(iv,cookie):
+    r = requests.get('https://aes.cryptohack.org/flipping_cookie/check_admin/'+cookie+'/'+iv+'/')
+    data = r.json()
+    data = data['flag']
+    return data
+def xor__hex_strings(a, b):
+	result = int(a, 16) ^ int(b, 16) # convert to integers and xor them together
+	return '{:x}'.format(result) 
+cookie = get_cookie()
+encrypted_flag = cookie[32:]
+iv = cookie[:32]
+flip_payload = "000000000000121319165e0000000000"
+flipped_cookie = xor__hex_strings(iv[:32],flip_payload)
+print(check_admin(flipped_cookie,encrypted_flag))
+‎CryptoHack/Symmetric_Cryptography/Symmetric_Cryptography12/solve.py
++33
+-3
+Lines changed: 33 additions & 3 deletions
+Original file line number	Diff line number	Diff line change
+@@ -1,4 +1,34 @@
+9b834c9b6bb97aaeda8d51733b8ef3f0
+82d7f1e9d19018125935bfba9847724b84ccf434b83c2cc268441e924d4b7aa993
+#!/usr/bin/env python3
 
-    steps:
-    - name: Checkout Repo
-      uses: actions/checkout@v4
-
-    - name: Deploy
-      uses: DefangLabs/defang-github-action@v1.1.0
+crypto{0fb_15_5ymm37r1c4l_!!!11!}
+from Crypto.Cipher import AES
+from Crypto.Util.Padding import pad, unpad
+import requests
+def encrypt_flag():
+    r = requests.get('https://aes.cryptohack.org/symmetry/encrypt_flag')
+    data = r.json()
+    data = data['ciphertext']
+    return data
+def encrypt(plaintext,iv):
+    r = requests.get('https://aes.cryptohack.org/symmetry/encrypt/'+plaintext+'/'+iv+'/')
+    data = r.json()
+    data = data['ciphertext']
+    return data
+def xor__hex_strings(a, b):
+	result = int(a, 16) ^ int(b, 16) # convert to integers and xor them together
+	return '{:x}'.format(result) 
+ciphertext = encrypt_flag()
+encrypted_flag = ciphertext[32:]
+iv = ciphertext[:32]
+print(bytes.fromhex(encrypt(encrypted_flag,iv)).decode("utf-8"))
