--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -5,7 +5,7 @@ Search within code
 ‎CryptoHack/Symmetric_Cryptography/Symmetric_Cryptography10/solve.py
 +34
 -4
-tex = 34 adition $4 aditional
+tex = cleaning up orphan prosses
 Original file line number	Diff line number	Diff line change
 @@ -1,5 +1,35 @@
 iv      : fd4e8ef6ee72860a5dc8fd37c1d18574
